session mit kewagi europa. vieles neu

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,41 @@
-<h1>Listing posts</h1>
+<!--<h1>Listing posts</h1>-->
+<p>
+<!--gibt die user.id aus, wenn ein user eingeloggt ist.
+<% #unless @user.nil? %>
+<%=h @user.id %>
+<%#end%>
+-->
 
+<% @posts.each do |post| %>
+<div class="post">
+<p class="post_title"><%=h post.title %></p>
+<p class="post_body"><%=h post.body %></p>
+<p class="post_tags">
+	<% post.tag_list.each do |tag| %>
+	<%=	link_to tag, {:action  => "tag", :id  => tag} %>&nbsp;
+	<% end %>
+</p>
+<p class="post_foot">[<%=h post.shownuser %>&nbsp;01.01.2009
+	<%if @user.id == post.owner%>
+    	<%= link_to 'Edit', edit_post_path(post) %>&nbsp;
+    	<%= link_to 'Destroy', post, :confirm => 'Are you sure?', :method => :delete %> 
+	<% end %>
+	<a href="posts/<%=h post.id %>">permalink <%=h post.comments.count %></a>]
+</p>
+</div>
+<% end %>
+
+<!--anzeigen-code aus der box
+</p>
 <table>
   <tr>
+	<th>id</th>
     <th>Title</th>
     <th>Body</th>
     <th>Owner</th>
     <th>Shownuser</th>
     <th>Visible</th>
+	<th>Taglist</th>
   </tr>
 
 <% @posts.each do |post| %>
@@ -18,12 +47,15 @@
     <td><%=h post.shownuser %></td>
     <td><%=h post.visible %></td>
     <td><%= link_to 'Anzeigen', post %></td>
-    <td><%= link_to 'Edit', edit_post_path(post) %></td>
-    <td><%= link_to 'Destroy', post, :confirm => 'Are you sure?', :method => :delete %></td>
+	<td><%=h post.tag_list %></td>
+	<%if @user.id == post.owner%>
+    	<td><%= link_to 'Edit', edit_post_path(post) %></td>
+    	<td><%= link_to 'Destroy', post, :confirm => 'Are you sure?', :method => :delete %></td> 
+	<%end%>
   </tr>
 <% end %>
 </table>
-
+-->
 <br />
-
+<%= will_paginate @posts %>
 <%= link_to 'New post', new_post_path %>
