--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :visible %><br />
     <%= f.check_box :visible %>
   </p>
+	<p>
+	<%= f.label :tag_list %><br />
+	<%= f.text_field :tag_list %>
+	</p>
   <p>
     <%= f.submit 'Create' %>
   </p>
