--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,6 +17,11 @@
   <b>Shownuser:</b>
   <%=h @post.shownuser %>
 </p>
+<p>tags:<br />
+	<% @post.tag_list.each do |tag| %>
+	  
+		<%=h tag %><br />
+	<%end%>
 
 <p>
   <b>Visible:</b>
@@ -25,6 +30,7 @@
 <hr />
 <p>
 	<% @comment.each do |x| %>
+	<%=x.title%><br />
 	<%=x.body%>
 	<%end%>
 	
